# geo-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.es.md  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/doubao-bytespider/: SKILL.md
.agents/skills/geo-api-docs-geo/: SKILL.md
.agents/skills/geo-bing-webmaster-foundation/: SKILL.md
.agents/skills/geo-case-studies-social-proof/: SKILL.md
.agents/skills/geo-changelog-freshness/: SKILL.md
.agents/skills/geo-comparison-pages/: SKILL.md
.agents/skills/geo-content-modeling/: SKILL.md
.agents/skills/geo-docs-help-center/: SKILL.md
.claude/skills/: doubao-bytespider.md  geo-api-docs-geo.md  geo-bing-webmaster-foundation.md  geo-case-studies-social-proof.md  geo-changelog-freshness.md  geo-comparison-pages.md  geo-content-modeling.md  geo-docs-help-center.md  geo-faq-coverage.md  geo-feature-pages.md  geo-homepage-positioning.md  geo-launch-distribution.md  geo-multilingual-localization.md  geo-oss-repo-geo.md  geo-pricing-pages.md  geo-site-migration-url-stability.md  geo-site-readiness.md  geo-structured-data-software-sites.md  geo-trust-and-entity-pages.md  openai-chatgpt-search.md
.github/workflows/: ci.yml
benchmarks/oss-release-site/: index.html
benchmarks/weak-marketing-site/: index.html
docs/plans/: 2026-04-15-fifth-batch-benchmarks-and-reporting.md  2026-04-15-first-batch-geo-skills.md  2026-04-15-second-batch-geo-capabilities.md
src/geo_skill/: audit.py  benchmarks.py  cli.py  skills.py
tests/: test_audit.py  test_cli.py
(+43 files in other folders)
